
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {void* userInfo; } ;
typedef TYPE_1__ sqliterk ;



void *sqliterkGetUserInfo(sqliterk *rk)
{
    if (!rk) {
        return ((void*)0);
    }
    return rk->userInfo;
}
